--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,9 @@
+*{
+    margin: 3px;
+    background-color: grey;
+    align-items: center;
 
+}
 h1{
     background-color: black;
     color: aquamarine;
@@ -6,4 +11,11 @@ h1{
 p{
     background-color: aquamarine;
     color: black;
+}
+li{
+    list-style: none;
+    background-color: yellow;
+}
+ol{
+    background-color: yellow;
 }
